--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -17,9 +18,13 @@
         android:inputType="text"
         android:autofillHints="course" />
 
+
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/coursesList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </LinearLayout>
 
 
