--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -19,7 +18,7 @@
         android:autofillHints="course" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/coursesList"
+        android:id="@+id/courseList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
