--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -21,7 +21,10 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:textSize="24sp"
-            android:text="@string/upLoadPageStringName" />
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:text="@string/upLoadPageStringName"
+            android:layout_marginBottom="48dp"/>
 
         <EditText
             android:id="@+id/uploadFileName"
@@ -29,20 +32,29 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="File Name" />
+            android:layout_marginBottom="12dp"
+            android:hint="Title" />
 
         <EditText
             android:id="@+id/uploadFileDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="@string/upLoadFileDescription" />
+            android:inputType="textMultiLine"
+            android:layout_marginBottom="12dp"
+            android:hint="Description"/>
+
+        <Button
+            android:id="@+id/selectFileButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select a file" />
 
         <Button
             android:id="@+id/uploadButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
             android:text="Upload" />
 
     </LinearLayout>
