--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -44,6 +44,7 @@
             android:textSize="18sp" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/courseFilesList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
